--- a/guide/elements/form.html
+++ b/guide/elements/form.html
@@ -472,7 +472,7 @@
         </div>
         <div class="g-example-body flex-block">
             <div class="form-set filebox">
-                <h4 class="label">대량입력</h4>
+                <h4 class="form-label">대량입력</h4>
                 <input class="h-input xl" placeholder="파일을 업로드해주세요" disabled="disabled">
                 <label for="ex_filename2" class="h-btn">업로드</label> 
                 <input type="file" id="ex_filename2" class="upload-hidden"> 
@@ -482,7 +482,7 @@
         <div class="g-example-foot">
             <pre><code class="html">
 &lt;div class="form-set filebox">
-    &lt;h4 class="label">대량입력&lt;/h4>
+    &lt;h4 class="form-label">대량입력&lt;/h4>
     &lt;input class="h-input xl" placeholder="파일을 업로드해주세요" disabled="disabled">
     &lt;label for="ex_filename2" class="h-btn">업로드&lt;/label> 
     &lt;input type="file" id="ex_filename2" class="upload-hidden"> 
