--- a/guide/list_other.html
+++ b/guide/list_other.html
@@ -99,7 +99,7 @@
                     <td class="date_start">07-23</td>
                     <td class="date_end">07-27</td>
                     <td class="state" data-state="done"></td>
-                    <td>window, 컴포넌트 작업 후 재전달</td>
+                    <td>window</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">공통(BC)</td>
