--- a/pages/SA/SA010201_03.html
+++ b/pages/SA/SA010201_03.html
@@ -186,7 +186,7 @@
                                             <label for="checkbox-nolabel"></label> 
                                         </div>
                                     </script>
-                                    <div class="table-content grid">
+                                    <div class="table-content grid has-bottom">
                                         <div data-role="grid" 
                                             data-sortable="true" 
                                             data-editable="true" 
