--- a/guide/list.html
+++ b/guide/list.html
@@ -112,7 +112,7 @@
                     <td class="date_start">08-09</td>
                     <td class="date_end">08-09</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>0816수정</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -177,7 +177,7 @@
                     <td class="date_start">08-10</td>
                     <td class="date_end">08-10</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>0816수정</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -190,7 +190,7 @@
                     <td class="date_start">08-11</td>
                     <td class="date_end">08-11</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>0816수정</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -255,7 +255,7 @@
                     <td class="date_start">08-12</td>
                     <td class="date_end">08-12</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>0816수정</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -304,9 +304,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-17</td>
                     <td class="ex_end">08-17</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-17</td>
+                    <td class="date_end">08-17</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -317,9 +317,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-17</td>
                     <td class="ex_end">08-17</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-17</td>
+                    <td class="date_end">08-17</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(lg)</td>
                 </tr>
                 <tr class="">
@@ -330,9 +330,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-17</td>
                     <td class="ex_end">08-17</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-17</td>
+                    <td class="date_end">08-17</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class=""> 
@@ -343,9 +343,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-17</td>
                     <td class="ex_end">08-17</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-17</td>
+                    <td class="date_end">08-17</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class=""> 
@@ -356,9 +356,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-17</td>
                     <td class="ex_end">08-17</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-17</td>
+                    <td class="date_end">08-17</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(sm)</td>
                 </tr>
                 <tr class="">
@@ -369,9 +369,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-17</td>
                     <td class="ex_end">08-17</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-17</td>
+                    <td class="date_end">08-17</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -384,7 +384,7 @@
                     <td class="ex_end">08-18</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(md)</td>
                 </tr>
                 <tr class="">
@@ -397,7 +397,7 @@
                     <td class="ex_end">08-18</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="ing"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -465,7 +465,7 @@
                     <td class="state" data-state=""></td>
                     <td>popup(lg), dropdown in column</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">02계약</td>
                     <td class="d2">02고객계약</td>
                     <td class="d3">01조회(02승인서발송_알럿)</td>
@@ -478,7 +478,7 @@
                     <td class="state" data-state=""></td>
                     <td>alert(320)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">02계약</td>
                     <td class="d2">02고객계약</td>
                     <td class="d3">01조회(03일괄수정)</td>
@@ -491,7 +491,7 @@
                     <td class="state" data-state=""></td>
                     <td>popup(480)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">02계약</td>
                     <td class="d2">02고객계약</td>
                     <td class="d3">01조회(03일괄수정)</td>
@@ -517,7 +517,7 @@
                     <td class="state" data-state=""></td>
                     <td>popup(lg)</td>
                 </tr>
-                <tr class="">
+                <tr class="do">
                     <td class="d1">02계약</td>
                     <td class="d2">02고객계약</td>
                     <td class="d3">02등록</td>
@@ -571,7 +571,7 @@
                     <td>popup(lg)</td>
                 </tr>
             
-                <tr class="">
+                <tr class="do">
                     <td class="d1">02계약</td>
                     <td class="d2">04본/지사관리</td>
                     <td class="d3">01조회</td>
@@ -623,7 +623,7 @@
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="">
+                <tr class="do">
                     <td class="d1">02계약</td>
                     <td class="d2">05고객차단관리</td>
                     <td class="d3">02대량등록</td>
