--- a/pages/SA/SA010302_02.html
+++ b/pages/SA/SA010302_02.html
@@ -124,58 +124,60 @@
                     </table>
                 </div>
                 <!-- 결제상품 -->
-                <div class="title-box xsm">
-                    <h4 class="sub-title">결제 상품</h4>
-                </div>
-                <div class="title-box xs">
-                    <div class="left-group">
-                        <div class="h-checkbox" id="listTransferAllTo1">
-                            <input type="checkbox" id="checkbox_list1" name="checkbox" />
-                            <label for="checkbox_list1"><span>모두선택</span></label>
+                <div class="table-set">
+                    <div class="title-box xsm">
+                        <h4 class="sub-title">결제 상품</h4>
+                    </div>
+                    <div class="title-box xs">
+                        <div class="left-group">
+                            <div class="h-checkbox" id="listTransferAllTo1">
+                                <input type="checkbox" id="checkbox_list1" name="checkbox" />
+                                <label for="checkbox_list1"><span>모두선택</span></label>
+                            </div>
+                        </div>
+                        <div class="right-group">
+                            <span class="amount-set">
+                                <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
+                                <span class="amount">26</span><span class="unit">건</span>
+                            </span>
                         </div>
                     </div>
-                    <div class="right-group">
-                        <span class="amount-set">
-                            <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
-                            <span class="amount">26</span><span class="unit">건</span>
-                        </span>
+                    <div class="optional-box" id="viewModel_listbox1">
+                        <script type="text/x-kendo-template" id="leftboxTemplate1">
+                            <div class="list-box listTransferTo1">
+                                <h3 class="title">#: ProductName #</h3>
+                            </div>
+                        </script>
+                        <script type="text/x-kendo-template" id="rightboxTemplate1">
+                            <div class="list-box listTransferFrom1">
+                                <h3 class="title">#: ProductName #</h3>
+                                <i class="h-ico close"></i>
+                            </div>
+                        </script> 
+                        <select id="listbox1_1" 
+                            data-role="listbox"
+                            data-text-field="ProductName"
+                            data-value-field="ProductID"
+                            data-connect-with="listbox1_2"
+                            data-template="leftboxTemplate1"
+                            data-toolbar='{
+                                tools: ["transferTo", "transferFrom", "transferAllTo", "transferAllFrom", "remove"]
+                            }'
+                            data-bind="source: products">
+                        </select>
+                        <select id="listbox1_2" 
+                            data-role="listbox"
+                            data-text-field="ProductName"
+                            data-value-field="ProductID"
+                            data-connect-with="listbox1_1"
+                            data-template="rightboxTemplate1"
+                            >
+                        </select>
                     </div>
-                </div>
-                <div class="optional-box" id="viewModel_listbox1">
-                    <script type="text/x-kendo-template" id="leftboxTemplate1">
-                        <div class="list-box listTransferTo1">
-                            <h3 class="title">#: ProductName #</h3>
-                        </div>
-                    </script>
-                    <script type="text/x-kendo-template" id="rightboxTemplate1">
-                        <div class="list-box listTransferFrom1">
-                            <h3 class="title">#: ProductName #</h3>
-                            <i class="h-ico close"></i>
-                        </div>
-                    </script> 
-                    <select id="listbox1_1" 
-                        data-role="listbox"
-                        data-text-field="ProductName"
-                        data-value-field="ProductID"
-                        data-connect-with="listbox1_2"
-                        data-template="leftboxTemplate1"
-                        data-toolbar='{
-                            tools: ["transferTo", "transferFrom", "transferAllTo", "transferAllFrom", "remove"]
-                        }'
-                        data-bind="source: products">
-                    </select>
-                    <select id="listbox1_2" 
-                        data-role="listbox"
-                        data-text-field="ProductName"
-                        data-value-field="ProductID"
-                        data-connect-with="listbox1_1"
-                        data-template="rightboxTemplate1"
-                        >
-                    </select>
                 </div>
                 <!-- //결제상품 -->
 
-                <div class="btn-box bottom justify-content-end">
+                <div class="btn-box bottom">
                     <button data-role="button" class="">등록</button>
                 </div>
             </div>
