--- a/pages/SA/SA010801.html
+++ b/pages/SA/SA010801.html
@@ -21,7 +21,7 @@
                 <div class="contents-header">
                     <div class="title-box lg">
                         <div class="left-group">
-                            <h2 class="main-title">거래처정보</h2>
+                            <h2 class="main-title">어플리케이션 정보</h2>
                             <span class="h-ico lg tip ml-8"
                                 title="툴팁 메세지 입니다."
                                 data-role="tooltip"
@@ -37,7 +37,7 @@
                                 data-navigational=true,
                                 data-items='[
                             { type:"rootitem", href: "", text: "기준정보", showText: true },
-                            { type:"item", href: "", text: "거래처정보", showText: true}
+                            { type:"item", href: "", text: "어플리케이션 정보", showText: true}
                          ]'/>
                         </div>
                     </div>
@@ -74,8 +74,7 @@
                                     </div>
                                     <div class="right-group">
                                         <div class="btn-box">
-                                            <button role="button" class="k-button k-grid-add"><span>등록</span></button>
-                                            <button role="button" class="k-button green"><span>엑셀</span></button>
+                                            <button role="button" class="k-button k-grid-add">등록</button>
                                         </div>
                                     </div>
                                 </div>
@@ -88,23 +87,15 @@
                             </script>
                             <div class="table-content grid has-bottom">
                                 <div data-role="grid" 
-                                data-sortable="true" 
-                                data-editable="true" 
-                                data-bind="source: gridSource"
-                                data-toolbar="#=toolbarTemplate()#"
-                                data-columns='[
-                                    { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 60, "template": "#=checkboxTemplate()#" },
+                                    data-sortable="true" 
+                                    data-editable="true" 
+                                    data-columns='[
+                                    { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
                                     { "title": "NO.", "width": 50 },
-                                    { "field": "상품코드", "width": 90 },
-                                    { "field": "상품명", "width": 170 },
-                                    { "field": "어플리케이션", "width": 146 },
-                                    { "field": "표준가격", "width": 140 },
-                                    { "field": "최소가격", "width": 146 },
-                                    { "field": "승인상태", "width": 140 },
-                                    { "field": "사용가능업종", "width": 140 },
-                                    { "field": "등록일", "width": 120 },
-                                    { "field": "종료일", "width": 120 }
-                                ]'>
+                                    { "field": ""  }
+                                    ]' 
+                                    data-bind="source: gridSource"
+                                    data-toolbar="#=toolbarTemplate()#">
                                 </div>
                                 <div class="table-bottom">
                                     <button data-role="button" class="gray-border">삭제</button>
@@ -146,7 +137,7 @@
             var result = template({});
             return result
         }
-</script>
+    </script>
 </body>
 
 </html>
